--- a/drift_data_api/package.json
+++ b/drift_data_api/package.json
@@ -10,9 +10,15 @@
     "dev": "ts-node-dev --respawn fundingrates.ts"
   },
   "devDependencies": {
-    "@types/node": "^18.19.3",
+    "@types/node": "^18.19.69",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@drift-labs/sdk": "^2.106.0-beta.1",
+    "@project-serum/anchor": "^0.26.0",
+    "@solana/web3.js": "^1.98.0",
+    "dotenv": "^16.4.7"
   }
-} 
+}
